fixed overflow on mat-card

--- a/depinder-fe/src/app/all-systems/system-info/system-dashboard/vulnerable-library-versions/vulnerable-library-details/vulnerable-library-details.component.css
+++ b/depinder-fe/src/app/all-systems/system-info/system-dashboard/vulnerable-library-versions/vulnerable-library-details/vulnerable-library-details.component.css
@@ -16,4 +16,6 @@ mat-card {
   padding-left: 16px;
   padding-top: 16px;
   margin-bottom: 16px;
+  width: 100%;
+  height: auto;
 }
